[gd_scene load_steps=2 format=3 uid="uid://b1ur1vitixdl4"]

[ext_resource type="Script" uid="uid://btiyykka0koec" path="res://scripts/ui/hud.gd" id="1_hud"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_hud")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopLeft" type="Control" parent="Margin"]
layout_mode = 2
mouse_filter = 2

[node name="HealthPanel" type="PanelContainer" parent="Margin/TopLeft"]
layout_mode = 1
offset_right = 320.0
offset_bottom = 45.0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Margin/TopLeft/HealthPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="HealthText" type="Label" parent="Margin/TopLeft/HealthPanel/VBox"]
layout_mode = 2
text = "HP  100 / 100"

[node name="HealthBar" type="ProgressBar" parent="Margin/TopLeft/HealthPanel/VBox"]
custom_minimum_size = Vector2(320, 18)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="BottomRight" type="Control" parent="Margin"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="AmmoPanel" type="PanelContainer" parent="Margin/BottomRight"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 171.0
grow_vertical = 0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="Margin/BottomRight/AmmoPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="WeaponName" type="Label" parent="Margin/BottomRight/AmmoPanel/VBox"]
layout_mode = 2
text = "Rusty Sidearm"

[node name="AmmoText" type="Label" parent="Margin/BottomRight/AmmoPanel/VBox"]
layout_mode = 2
text = "NINE_MM  12/12  |  90"
